name:           Hql
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         vilay
data-files:     
                src/DBdemo.hs, 
                src/demo.hs, 
                src/Hql1.hs, 
                src/Hql2.hs, 
                Hql.cabal, 
                Setup.hs, 
                test1.db


executable Hql
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   HDBC-sqlite3,
                   HDBC,
                   convertible,
                   template-haskell,
                   parsec
  ghc-options:     -Wall

