name:           Hql
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         vilay
data-files:     
                src/Hql.hs, 
                src/HqlParser.hs, 
                Hql.cabal, 
                info, 
                poster.pdf, 
                Setup.hs, 
                test1.db, 
                Testing.txt

executable Hql
  hs-source-dirs:  src
  main-is:         HqlParser.hs
  build-depends:   
                   base >= 4,
                   HDBC-sqlite3,
                   HDBC,
                   convertible,
                   template-haskell,
                   parsec,
                   text
  ghc-options:     -Wall
  other-modules:   Paths_Hql

library 
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: 
                   Hql,
                   HqlParser,
                   Paths_Hql
  other-modules:   
                   Hql,
                   HqlParser,
                   Paths_Hql

